--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,7 +91,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.rnstartkit"
+        applicationId "com.phxrb"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
