--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "antd-mobile": "^0.9.13",
+    "antd-mobile": "^1.0.5",
     "normalizr-immutable": "^0.0.3",
     "react": "~15.4.2",
     "react-native": "0.41.0",
@@ -21,7 +21,7 @@
     "react-native-leancloud-push": "git+https://github.com/liaoyuan-io/react-native-leancloud-push.git",
     "react-native-push-notification": "^2.2.1",
     "react-native-qq": "^2.0.4",
-    "react-native-scrollable-tab-view": "0.7.1",
+    "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-storage": "^0.1.4",
     "react-native-swiper": "^1.5.4",
     "react-native-uuid": "^1.4.9",
